feat(config): add ConfigManager for centralized configuration handling
refactor: update imports and organize code for better maintainability
style: clean up code formatting and remove unused imports
fix: correct health minimum value usage in HealthSteal
chore: add changelog entries for new features and changes